comment custom js

--- a/google-analytics.html
+++ b/google-analytics.html
@@ -6,7 +6,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-N8GN7MW');</script>
 <!-- End Google Tag Manager -->
 
-<script>
+<!-- <script>
   $(document).on('shiny:inputchanged', function(e) {
     console.log(e)
     gtag('event', 'page_view', {
@@ -41,4 +41,4 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       'event_category': 'engagement'
     });
   });
-</script>
+</script> -->
